--- a/style.css
+++ b/style.css
@@ -11,8 +11,14 @@
         background-position: center;
     }
 
+h1
+    {
+        font-family: 'Rajdhani', sans-serif;
+        font-weight: medium ;
+        font-size: 36px ;
+        text-transform: uppercase;
+    }
 
-   
 .bouton
     {
         font-family: 'Rajdhani', sans-serif;
@@ -121,7 +127,7 @@ nav p
     }
 
 
-    /******************************************** DIFFERENTS ACTEURS BATMAN *****************************************/
+    /******************************************** ACTEURS BATMAN *****************************************/
 
 
 #voir-le-heros , #acteurs-batman p
@@ -143,7 +149,7 @@ nav p
 
 
 
-/********************************************  LES ENNEMIS DE BATMAN *****************************************/
+/******************************************** ENEMIS BATMAN *****************************************/
 
 
 #titre-ennemis
@@ -175,7 +181,7 @@ nav p
     }
 
 
-/******************************************** LES ALLIES DE BATMAN *****************************************/
+/******************************************** ALLIES BATMAN *****************************************/
 
 
 #titre-allies
@@ -208,7 +214,7 @@ nav p
     }
 
 
-/******************************************** LA JUSTICE LEAGUE *****************************************/
+/******************************************** JUSTICE LEAGUE *****************************************/
 
 
 #justice-league h1 , #justice-league p
